2003-03-26  Keisuke Nishida  <knishida@netlab.jp>

	* cobpp.h (COBPP_DEFAULT_TAB_WIDTH): New macro.
	(COBPP_DEFAULT_TEXT_COLUMN): New macro.
	(COBPP_FORMAT_UNKNOWN): Removed.
	(COBPP_FORMAT_SEMI_FIXED): Removed.

	* cobpp.c (short_options): New option `C'.  Remove `D'.
	(long_options): "debug" is replaced by "-fdebugging-line".
	"-Wtrailing-line" is replaced by "-Wcolumn-overflow".

	* cobpp.h, cobpp.c (cobpp_text_column): New variable.
	* scanner.l (read_line): Use it.

	* cobpp.c (main): Do not infer the source format.

2003-01-24  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l (open_buffer): Open copy file in "rb" mode to avoid
	seek error on MinGW.  (Thanks to peg@coboler.com)

2002-11-01  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l (read_line): Check newline at the end of file.

	* scanner.l (read_line): Check column 7 before post-column 72.

2002-10-07  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l (read_line): Inhibit column 72 warnings after 4 times.

2002-09-30  Keisuke Nishida  <knishida@netlab.jp>

	* cobpp.h (COBPP_PACKAGE): Use PACKAGE_NAME.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l: Do not support single-quoted strings.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l (display_line): Removed.
	(yyinput): Append multiple LF's during concatenating lines.

2002-09-17  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (yywarn): New function.
	* cobpp.h (COBPP_FORMAT_UNKNOWN): New macro.
	* cobpp.h, cobpp.c (cobpp_source_format_inferred): New variable.
	* cobpp.c (cobpp_source_format): Default to COBPP_FORMAT_UNKNOWN.
	(main): Infer source format here.

	* cobpp.h, cobpp.c (cobpp_warn_trailing_line): New variables.
	* scanner.l (read_line): Show warnings for over column 72.

2002-09-17  Keisuke Nishida  <knishida@netlab.jp>

	* Rename all `cob_*' to `cobpp_*'.

2002-09-09  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l (read_line): Don't use fgets.
